--- a/src/app/area/area.component.html
+++ b/src/app/area/area.component.html
@@ -1,5 +1,5 @@
 
 <input type="number" #calcul>
 <button type="button" (click)="cercle(calcul.value)" >calculer cercle</button>
-<button type="button"(click)="carre(calcul.value)" >calculer carre</button>
+<button type="button" class="btn btn-success" (click)="carre(calcul.value)" >calculer carre</button>
 <br> {{affichage}}
