exe2 de challenge2

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,3 +7,7 @@
     </li>
 </ul>
 <button type="button" (click)="liste()">{{textButton}} </button>
+<br>
+ <input  [(ngModel)]="name"  type="text"> 
+ <input  [(ngModel)]="adr"  type="text"> 
+ <input  [(ngModel)]="mail"  type="email"> 
