--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -4,17 +4,17 @@
      <div *ngFor="let article of listeArticles; let i=index">
             <!-- {{article |json}}  -->
             <h1>{{article.titre}} </h1>
-            <h1>{{article.contenu}} </h1>
-            <h1>{{article.auteur}} </h1>
-            <h1>{{article.date}} </h1>
+            <p>Contenu: {{article.contenu}} </p>
+            <p>Auteur: {{article.auteur}} </p>
+            <p>Date: {{article.date}} </p>
 
 </div>
 </div>
 <form>
-<fieldset> 
+<!-- <fieldset> 
     <legend>Le championat du monde</legend>
-    <h6>Auteur  Med TAHER</h6><br>
-<h6>Date  05-02/2005</h6><br>
-<h6>contenu  le champion du monde de cette année est:</h6>
+    <h6>Auteur:  Med TAHER</h6><br>
+<h6>Date:  05-02/2005</h6><br>
+<h6>contenu:  le champion du monde de cette année est:</h6>
 </fieldset>
-</form>
+</form> -->
